@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: x11.trm,v 1.171 2007/12/20 03:15:55 sfeam Exp $
+ * $Id: x11.trm,v 1.172 2008/02/24 19:49:42 sfeam Exp $
  *
  */
 
@@ -81,7 +81,7 @@ TERM_PUBLIC void X11_put_text __PROTO((unsigned int x, unsigned int y, const cha
 TERM_PUBLIC int X11_text_angle __PROTO((int i));
 TERM_PUBLIC int X11_justify_text __PROTO((enum JUSTIFY mode));
 TERM_PUBLIC void X11_point __PROTO((unsigned int x, unsigned int y, int number));
-TERM_PUBLIC void X11_fillbox __PROTO((int style, unsigned int x, unsigned y, unsigned int width, unsigned int height));
+TERM_PUBLIC void X11_fillbox __PROTO((int style, unsigned int x, unsigned int y, unsigned int width, unsigned int height));
 
 #if defined(WITH_IMAGE) || defined(BINARY_X11_POLYGON)
 TERM_PUBLIC void X11_send_endianess __PROTO((void));
@@ -101,7 +101,7 @@ TERM_PUBLIC void X11_set_color __PROTO((t_colorspec *));
 TERM_PUBLIC void X11_filled_polygon __PROTO((int, gpiPoint *));
 
 # ifdef WITH_IMAGE
-TERM_PUBLIC void X11_image __PROTO((unsigned, unsigned, coordval *, gpiPoint *, t_imagecolor));
+TERM_PUBLIC void X11_image __PROTO((unsigned int, unsigned int, coordval *, gpiPoint *, t_imagecolor));
 # endif
 
 /* To support "set term x11 enhanced" */
@@ -1636,7 +1636,7 @@ X11_filled_polygon(int points, gpiPoint *corners)
     int i_corner;
     unsigned short i_buffer;
     unsigned short byte_remaining;
-    unsigned point_remaining;
+    unsigned int point_remaining;
 
     /* Encode and transfer data to the pipe, one character at a time. */
 
@@ -1904,7 +1904,7 @@ X11_send_endianess(void)
 #ifdef WITH_IMAGE
 
 TERM_PUBLIC void
-X11_image(unsigned M, unsigned N, coordval *image, gpiPoint *corner, t_imagecolor color_mode)
+X11_image(unsigned int M, unsigned int N, coordval *image, gpiPoint *corner, t_imagecolor color_mode)
 {
 
     /* Avoid using floats or formatted I/O.  That's too slow for image data.
@@ -1937,7 +1937,7 @@ X11_image(unsigned M, unsigned N, coordval *image, gpiPoint *corner, t_imagecolo
      */
 
     unsigned short i_buffer;
-    unsigned coord_remaining;
+    unsigned int coord_remaining;
     coordval *coord_ptr;
 
     /* Use formatted I/O to transfer image information.  Hexadecimal uses less characters.
